# idle_champions_codes_crawler

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml
src/: cache.rs  client.rs  config.rs  main.rs  parse.rs
src/handler/: discord.rs  mod.rs
