[package]
name = "liccrawler"
description = "Crawls various sources for Idle Champions Codes"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
]
repository = "https://github.com/zarthus/liccrawler"
homepage = "https://github.com/zarthus/liccrawler"
categories = []
keywords = []
readme = "README.md"
publish = false

[dependencies]
directories = "5.0"
licc = { version = "0.2", features = ["write"] }
log = "0.4"
once_cell = "1.19"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", features = ["http", "builder"], optional = true }
time = "0.3"
tokio = { version = "1.36", features = ["macros"] }
toml = "0.8.9"
zarthus_env_logger = { version = "0.3", features = ["time"], default-features = false }

[features]
default = [
    "discord"
]
discord = ["serenity"]

[badges]
